# Teleport

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  magic.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
daemon/: Cargo.toml
daemon/src/: crypto.rs  discovery.rs  lib.rs  main.rs  network.rs  path_safe.rs  proto.rs
docs/: Path_To_Production.md  Teleport_App_Idea.md  Teleport_POC_Engineering_Guide.md  macOS_App_Ideas.md
ui/: Package.swift
ui/Resources/: Info.plist
ui/Scripts/: build_app.sh  build_dmg.sh  build_icon.sh  make_icon.swift
ui/Sources/TeleportUI/: TeleportApp.swift
ui/Sources/TeleportUI/App/: AppDelegate.swift  TeleportApp.swift
ui/Sources/TeleportUI/Controllers/: BonjourBrowser.swift  DaemonController.swift  WatchFolderManager.swift
ui/Sources/TeleportUI/Theme/: Theme.swift
ui/Sources/TeleportUI/Util/: LocalAddressBook.swift  LogPersistence.swift  Passphrase.swift  VisualEffectView.swift
ui/Sources/TeleportUI/Views/: Components.swift  DashboardView.swift  LogsView.swift  MenuBarContent.swift  RootView.swift  SettingsView.swift  SidebarView.swift
ui/Teleport.app/Contents/MacOS/: TeleportUI
ui/Teleport.app/Contents/Resources/: AppIcon.icns
ui/Teleport.app/Contents/_CodeSignature/: CodeResources
