[package]
name = "teleport-daemon"
version = "0.3.0"
edition = "2021"

[dependencies]
notify = "6.1.1"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
diffy = "0.3"
