[package]
name = "teleport-daemon"
version = "0.5.0"
edition = "2021"

[dependencies]
notify = "6.1"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
dashmap = "5.5"
diffy = "0.3"

# v0.4 — encryption
snow = "0.9"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
data-encoding = "2.5"

# v0.4 — initial sync walk
walkdir = "2.5"

# v0.5 — local-network discovery
mdns-sd = "0.11"
gethostname = "0.5"

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "teleport-daemon"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
